# extinguisher_capture

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/components/audio_camera/: CMakeLists.txt  component.mk
components/components/audio_camera/include/: audio_camera.h
components/components/camera/: CMakeLists.txt  component.mk
components/components/camera/cam_driver/: cam_hal.c  esp_camera.c
components/components/camera/cam_driver/include/: esp_camera.h
components/components/camera/sensors/private_include/: ov5640_regs.h  ov5640_settings.h
components/components/cbor/tinycbor/: .tag
components/components/driver/: sdspi_host.c
components/components/usb/: usb_helpers.c
components/components/usb/iot_usbh/: CMakeLists.txt  iot_usbh.c
components/components/usb/iot_usbh_cdc/: CMakeLists.txt
components/components/usb/iot_usbh_modem/: CMakeLists.txt
components/components/usb/iot_usbh_modem/include/: usbh_modem_board.h
components/components/usb/iot_usbh_modem/private_include/: esp_modem.h  esp_modem_dce_common_commands.h
main/: CMakeLists.txt  demo.c  demo.h  gy_gpio.c  gy_gpio.h  idf_component.yml  main.c  wifi.c  wifi.h
wback/资料备份/: http.c
